--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "@primeuix/themes": "^2.0.2",
     "@tailwindcss/vite": "^4.1.17",
     "@vueuse/core": "^14.1.0",
     "chart.js": "^4.5.1",
+    "gh-pages": "^6.3.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.5.3",
     "tailwindcss": "^4.1.17",
